# ResearchPaperWorkflow

./: .gitignore  AGENTS.md  AGENT_ROLES.md  ARCHITECTURE.md  CASE_STUDIES.md  Dockerfile.template  INTEGRATION_MAP.md  LICENSE  MERGED_FULL.html  Makefile  PIPELINE_DESIGN.md  QUALITY_GATES.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  WORKFLOW_PATTERNS.md  export_pdf.py  pyproject.toml  test_p0_verification.py  workflow_contract.yaml
.claude/: SKILL_REGISTRY.md
code_library/: __init__.py  environment_registry.yaml  method_knowledge_base.yaml  module_registry.yaml  plugin_loader.py  plugin_registry.yaml
config/: analysis_graph_schema.yaml  bioinformatics_method_contract.yaml  code_library_registry.yaml  data_governance_contract.yaml  default_config.yaml  deprecated_methods.yaml  environment_contract.yaml  evidence_graph_schema.yaml  journal_database.yaml  module_registry_schema.yaml  reporting_contract.yaml  required_skills.yaml  research_intent.schema.yaml  result_write_policy.yaml  target_task.schema.yaml  visualization_contract.yaml  workflow_modes.yaml
docs/: AI_HARNESS_INTERACTION_GUIDE_ZH.md  ARCHITECTURE.md  CLINICAL_RESEARCH_CODEX_WORKFLOW_GUIDE.md  CLINICIAN_GRADUATE_USER_GUIDE_ZH.md  CODEX_COLLABORATION_SYSTEM.md  CODEX_MODE_INTERACTION_GUIDE_ZH.md  CODEX_WORKFLOW_OPTIMIZATION_TARGETS_2026-07-07.md  FRAMEWORK_BLUEPRINT.md  METHOD_ASSET_ARCHITECTURE_v4.5.0.md  METHOD_ASSET_ARCHITECTURE_v4.6.0.md  METHOD_ASSET_ARCHITECTURE_v4.7.0.md  METHOD_ASSET_ARCHITECTURE_v4.8.0.md  METHOD_ASSET_ORCHESTRATION_GUIDE_v4.5.0.md  METHOD_ASSET_ORCHESTRATION_GUIDE_v4.6.0.md  METHOD_ASSET_ORCHESTRATION_GUIDE_v4.7.0.md  METHOD_ASSET_ORCHESTRATION_GUIDE_v4.8.0.md  NEXT_GEN_COMPLETION_AUDIT.md  NEXT_GEN_V4_TRUTH_LAYER.md  OPERATION_GUIDE_ZH.md  OPTIMIZATION_IMPLEMENTATION_STATUS_2026-07-07.md  QUICK_START.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v4.2.0.md  RELEASE_NOTES_v4.3.0.md  RELEASE_NOTES_v4.4.0.md  RELEASE_NOTES_v4.5.0.md  RELEASE_NOTES_v4.6.0.md  RELEASE_NOTES_v4.7.0.md  RELEASE_NOTES_v4.8.0.md  RELEASE_NOTES_v5.0.0.md  RELEASE_NOTES_v5.1.0.md  R_ENVIRONMENT_SETUP_ZH.md  V4_CONFIGURATION_AUDIT.md  V4_INSTALLATION_AND_USAGE_GUIDE.md  V5_1_ACCEPTANCE_MATRIX.md  V5_1_PRODUCTIVITY_SCORECARD.md  V5_1_RESEARCHER_EXPERIENCE_TUNING_PLAN.md  V5_BASELINE_TRUTH.md  V5_PRODUCTION_KERNEL_REFORM_PLAN.md  V5_PRODUCTIVITY_SCORECARD.md  (+3 more)
local_experience/: README.md  local_experience_registry.yaml  method_snippet_registry.yaml  project_pattern_registry.yaml  tuning_lessons.yaml
paper_writing/: SKILL.md
scripts/: bootstrap_r_bulk_env.R  bootstrap_r_seurat_env.R  (+17 more)
(+347 files in other folders)
