# Research Paper Workflow Framework
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-workflow"
version = "4.2.0"
description = "Domain-agnostic research paper workflow system for bioinformatics and clinical research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Research Paper Workflow Framework"}]
keywords = [
    "bioinformatics",
    "research",
    "paper-writing",
    "workflow",
    "multi-agent",
    "scientific-computing",
    "reproducibility",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]
full = [
    "paper-workflow[plotting]",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.scripts]
paper-workflow = "paper_workflow.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
