# Research Paper Workflow Framework
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-workflow"
version = "4.6.0"
description = "Domain-agnostic research paper workflow system for bioinformatics and clinical research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Research Paper Workflow Framework"}]
keywords = [
    "bioinformatics",
    "research",
    "paper-writing",
    "workflow",
    "multi-agent",
    "scientific-computing",
    "reproducibility",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]
bioinformatics = [
    "paper-workflow[plotting]",
    "anndata>=0.10",
    "scanpy>=1.10",
    "squidpy>=1.6",
    "decoupler>=1.8",
    "gseapy>=1.1",
    "gprofiler-official>=1.0",
]
singlecell = [
    "paper-workflow[bioinformatics]",
]
full = [
    "paper-workflow[bioinformatics]",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
paper-workflow = "paper_workflow.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "code_library/external_repos",
    "code_library/external_skill_sources",
    "papers",
    "tmp",
    "output",
    "outputs",
]
